@@ -76,12 +76,20 @@ function advanced_forum_preprocess_node(&$vars) {
     // Node is being shown in the forum (not on the front page or in a view)
     $vars['is_forum'] = TRUE;
     
-    // Change first post from "add comment" to "Reply"
     if (!empty($vars['node']->links) && !empty($vars['node']->links['comment_add'])) {
+      // Change first post from "add comment" to "Reply"
       $vars['node']->links['comment_add']['title'] = t('Reply');
-      $vars['links'] = theme('links', $vars['node']->links, array('class' => 'links inline'));
+      $vars['links'] = theme('links', $vars['node']->links, array('class' => 'links inline forumlinks'));
+      
+      // Make a separate variable for the reply link so it can be put on top of the thread
+      $reply_link = $vars['node']->links['comment_add'];
+      $reply_link['title'] = t("Post Reply");
+      $vars['reply_link'] = theme('links', array('topic_reply'=>$reply_link),array('class' => 'forumlinks'));
     }
     
+    // Make an array version of $links
+    $vars['links_array'] = $vars['node']->links;
+
     // Comment numbering
     static $post_number = 0;
     _topic_nid($vars['node']->nid);
@@ -102,6 +110,7 @@ function advanced_forum_preprocess_node(&$vars) {
 
 function advanced_forum_preprocess_comment(&$vars) {
   if (_is_forum('comment',$vars)) {
+    
     // Use our combined node/comment template file
     // D5 won't find templates in subdirectories so we need to give it that
     $forum_theme = advanced_forum_get_forum_theme_directory();
@@ -144,6 +153,20 @@ function advanced_forum_preprocess_comment(&$vars) {
     if (!empty($vars['comment']->page_url) && !(arg(0) == 'comment' && arg(1) == $vars['comment']->cid)) {
       $variables['page_link'] = l('(permalink)', $vars['comment']->page_url);
     }
+    
+    // Because the $links array isn't available here, we recreate it
+    $node = node_load($vars['comment']->nid);
+    $links = module_invoke_all('link', 'comment', $vars['comment'], 1);
+    foreach (module_implements('link_alter') as $module) {
+      $function = $module .'_link_alter';
+      $function($node, $links);
+    }
+    unset($links['comment_parent']);
+    $vars['links'] = theme('links',$links,array('class'=>'links forumlinks'));
+    $vars['links_array'] = $links;   
+    
+    // Since we have to load the node anyway for our links trick, make it avail
+    $vars['node'] = $node;    
   }
 }
 
@@ -288,6 +311,9 @@ function phptemplate_forum_display($forums, $topics, $parents, $tid, $sortby, $f
   // Pass the parameters into the D6 preprocess function
   template_preprocess_forums(&$variables);
 
+  // Pass the parameters into our preprocess function
+  advanced_forum_preprocess_forums(&$variables);
+
   // Look for the .tpl file in the theme. If found, use it. If not found, default
   // to the stock forum code and put up a warning.
   $forum_theme = advanced_forum_get_forum_theme_directory();
@@ -298,6 +324,19 @@ function phptemplate_forum_display($forums, $topics, $parents, $tid, $sortby, $f
     return theme_forum_display($forums, $topics, $parents, $tid, $sortby, $forum_per_page);
   }
 }
+
+function advanced_forum_preprocess_forums(&$variables) {
+  if (empty($variables['topics'])) {
+    // We don't want the links on the top of the forum overview
+    $variables['links_orig'] = $variables['links'];
+    $variables['links'] = array();
+  }
+}
+
+
+
+//$markbutton = l($tid ? t('Mark all topics read') : t('Mark all forums read'),"forum/markasread/$tid",array('class'=>'cssbutton'));
+//      $output .= '<div class ="markasread">' . $markbutton . '</div>';
 
 
 /**
@@ -417,69 +456,6 @@ function advanced_forum_preprocess_forum_icon(&$variables) {
   $variables['iconpath'] = $iconpath;
   
   return;
-}
-
-/**
- * Implementation of theme_forumlinks
- */
-function theme_forumlinks($links, $attributes = array('class' => 'links')) {
-  $output = '';
-
-  if (count($links) > 0) {
-    $output = '<ul'. drupal_attributes($attributes) .'>';
-
-    $num_links = count($links);
-    $i = 1;
-
-    foreach ($links as $key => $link) {
-      $class = '';
-
-      // Automatically add a class to each link and also to each LI
-      if (isset($link['attributes']) && isset($link['attributes']['class'])) {
-        $link['attributes']['class'] .= ' ' . $key;
-        $class = $key;
-      }
-      else {
-        $link['attributes']['class'] = $key;
-        $class = $key;
-      }
-
-      // Add first and last classes to the list of links to help out themers.
-      $extra_class = '';
-      if ($i == 1) {
-        $extra_class .= 'first ';
-      }
-      if ($i == $num_links) {
-        $extra_class .= 'last ';
-      }
-      $output .= '<li class="'. $extra_class . $class .'">';
-
-      // Is the title HTML?
-      $html = isset($link['html']) && $link['html'];
-
-      // Initialize fragment and query variables.
-      $link['query'] = isset($link['query']) ? $link['query'] : NULL;
-      $link['fragment'] = isset($link['fragment']) ? $link['fragment'] : NULL;
-
-      if (isset($link['href'])) {
-        $output .= l($link['title'], $link['href'], $link['attributes'], $link['query'], $link['fragment'], FALSE, $html);
-      }
-      else if ($link['title']) {
-        //Some links are actually not links, but we wrap these in <span> for adding title and class attributes
-        if (!$html) {
-          $link['title'] = check_plain($link['title']);
-        }
-        $output .= '<span'. drupal_attributes($link['attributes']) .'>'. $link['title'] .'</span>';
-      }
-
-      $i++;
-      $output .= "</li>\n";
-    }
-
-    $output .= '</ul>';
-  }
-
-  return $output;
 }
 
 /*****************************************************************************/
